fix(styles): font-size on small screen

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -48,7 +48,7 @@
 }
 
 .notion-gallery-grid .notion-page-title-text {
-  font-size: 2em;
+  font-size: 1.8em;
   white-space: unset;
 }
 
@@ -73,7 +73,6 @@
   border-radius: 8px;
   height: fit-content;
   overflow: visible;
-  box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
 }
 
 .notion-collection-card-body {
@@ -132,19 +131,18 @@
   .notion-page-icon-wrapper img.notion-page-icon {
     height: 50%;
   }
+  .notion-gallery-grid .notion-page-title-text {
+    font-size: 1.3em;
+    white-space: unset;
+  }
+  .notion-title {
+    font-size: 1.5em !important;
+  }
 }
 
 @media only screen and (max-width: 600px) {
   .notion-search-button {
     display: none !important;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  .notion-gallery-grid {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 10vmin;
-    gap: 10vmin;
   }
 }
 
@@ -154,6 +152,7 @@
 }
 
 .notion-title {
+  font-size: 1.8em;
   display: block;
   text-align: center;
 }
@@ -172,9 +171,8 @@
 }
 
 .notion-page-cover {
-  max-width: 1200px;
+  max-width: 700px;
   border-radius: 24px;
-  box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
 }
 
 @media only screen and (max-width: 1200px) {
@@ -308,7 +306,7 @@
 /* if you don't want rounded page images, remove this */
 .notion-page-icon-wrapper img.notion-page-icon {
   border-radius: 50%;
-  box-shadow: 0 8px 40px 0 rgb(0 0 0 / 21%);
+  box-shadow: 0 8px 10px 0 rgb(0 0 0 / 21%);
 }
 
 .notion-header {
